--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       background: var(--bg);
       color: var(--text);
       font-family: 'Segoe UI', sans-serif;
-      max-width: 700px;
+      max-width: 1000px;
       margin: auto;
       padding: 20px;
       transition: background 0.3s, color 0.3s;
@@ -32,13 +32,29 @@
       text-align: center;
     }
 
+    #themeToggle {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      font-size: 20px;
+      cursor: pointer;
+    }
+
+    #episodes {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 15px;
+      margin-top: 20px;
+    }
+
     .episode {
       background: var(--card);
-      margin: 10px 0;
       padding: 15px;
       border-radius: 8px;
       cursor: pointer;
       transition: background 0.2s;
+      text-align: center;
+      height: 100%;
     }
 
     .episode:hover {
@@ -48,7 +64,7 @@
 
     .episode h3 {
       margin: 0;
-      font-size: 1.1em;
+      font-size: 1em;
     }
 
     #pagination {
@@ -73,21 +89,13 @@
       cursor: not-allowed;
     }
 
-    #themeToggle {
-      position: absolute;
-      top: 10px;
-      right: 15px;
-      font-size: 20px;
-      cursor: pointer;
-    }
-
     #loading {
       text-align: center;
     }
   </style>
 </head>
-<body>
-  <div id="themeToggle">🌙</div>
+<body class="dark">
+  <div id="themeToggle">☀️</div>
   <h1>Katalog odcinków</h1>
   <div id="episodes"></div>
 
@@ -101,15 +109,17 @@
 
   <script>
     const DATA_URL = "https://raw.githubusercontent.com/KiepscyTV/KiepscyTV.github.io/refs/tags/1.0.0/bin/episodes.json";
-    const EPISODES_PER_PAGE = 20;
+    const EPISODES_PER_PAGE = 40;
     const STORAGE_KEY = "kiepscy_page";
 
     let allEpisodes = [];
     let currentPage = parseInt(localStorage.getItem(STORAGE_KEY)) || 0;
 
-    // Tryb ciemny
+    // Ciemny tryb domyślnie
     const themeToggle = document.getElementById('themeToggle');
-    if (localStorage.getItem('theme') === 'dark') document.body.classList.add('dark');
+    const prefersDark = !localStorage.getItem('theme') || localStorage.getItem('theme') === 'dark';
+    if (prefersDark) document.body.classList.add('dark');
+
     themeToggle.textContent = document.body.classList.contains('dark') ? '☀️' : '🌙';
     themeToggle.onclick = () => {
       document.body.classList.toggle('dark');
